# Cotti_Beatrice_DL2023

./: .gitignore  .pre-commit-config.yaml  DL_Beatrice_Cotti.ipynb  DL_Beatrice_Cotti.py  README.md  beatrice_cotti_dl.job  plots.ipynb  pyproject.toml  requirements.txt  upload.sh
logs/: slurm-63.out  slurm-66.out  slurm-67.out
notebooks/: DL_Beatrice_Cotti.ipynb
scripts/: beatrice_cotti_dl.job  convert_to_script.sh
